Modify index.scss to include Bootstrap's Sass file and customize variables

--- a/src/index.scss
+++ b/src/index.scss
@@ -1,7 +1,8 @@
-$color: steelblue;
+// index.scss
 
-.my-flix {
-  color: $color;
-}
+// Custom Bootstrap variables
+$primary: SeaGreen;
+$body-bg: Honeydew;
 
-@import '~bootstrap/scss/bootstrap';
+// Import Bootstrap's Sass file
+@import '~bootstrap/scss/bootstrap.scss';
